# mender-ncs-example

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  prj.conf  sample.yaml  sysbuild.conf  trial.conf  troubleshoot.conf  west.yml
.github/workflows/: check-code-format.yml  check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  device-testing.yml  do_code_format.sh  hardware-map.yml
app/: CMakeLists.txt  Kconfig  mcumgr.conf  pm_static_nrf7002dk_nrf5340_cpuapp_ns.yml  prj.conf  sysbuild.conf  testcase.yaml  trial.conf  troubleshoot-file-transfer.conf  troubleshoot-port-forwarding.conf  troubleshoot.conf
app/boards/: nrf7002dk_nrf5340_cpuapp_ns.conf  nrf7002dk_nrf5340_cpuapp_ns.overlay
app/pytest/: helpers.py  mender-cli-terminal.sh  mender_cli.py  mender_management.py  test_mender_mcu_client.py
app/src/: main.c
app/sysbuild/mcuboot/: app.overlay  prj.conf
app/sysbuild/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
boards/: nrf7002dk_nrf5340_cpuapp_ns.overlay
modules/msgpack-c/: CMakeLists.txt  Kconfig
modules/msgpack-c/zephyr/: module.yml
src/: main.c
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
zephyr/: module.yml
